[tool.poetry]
name = "terrasnek"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.2"
pydantic = "^1.10"
python-dateutil = "^2.8"

[tool.poetry.dev-dependencies]
mypy = "^0.991"
pylint = "^2.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
